templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-service
  namespace: kong
spec:
  selector:
    app: gateway-app
  ports:
    - name: proxy
      protocol: TCP
      port: 8000
      targetPort: 8000
