templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
  name: kong-ingress
  namespace: kong
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - suntzu.digiploux.fr
      secretName: my-app-tls
  rules:
    - host: suntzu.digiploux.fr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kong-service
                port:
                  number: 8000
